# linutil

./: Cargo.toml
core/: Cargo.toml
src/: running_command.rs  state.rs  tabs.rs
src/systeminfo/: mod.rs
tui/: Cargo.toml
tui/src/: confirmation.rs  float.rs  floating_text.rs  running_command.rs  state.rs
