[workspace.package]
license = "MIT"
version = "24.9.19"
repository = "https://github.com/ChrisTitusTech/linutil"

[workspace.dependencies]
ego-tree = "0.6.2"

[workspace]
members = ["core", "tui"]
resolver = "2"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
